--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   Generate-Variable:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest 
     outputs:
       git-short-sha: ${{ steps.git-short-sha.outputs.git-short-sha }}
     steps:
