--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,6 @@ jobs:
         run: |
           echo "git-short-sha=${COMMIT_SHA::8}" >> "$GITHUB_OUTPUT"
           registry="IMAGE_REGISTRY_${BRANCH_NAME^^}"
-          image-registry=${!registry}  
-          echo "image-registry=${image-registry}" >> "$GITHUB_OUTPUT"
+          image_registry=${!registry}     
+          echo "image-registry=${image_registry}" >> "$GITHUB_OUTPUT"
           cat "$GITHUB_OUTPUT"
